[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ui/Money Icon.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/BG.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/ShopItem.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/money_pack_10000.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/gem.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/ads.png" type="Texture" id=7]
[ext_resource path="res://scenes/AdMob.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[node name="ShopItem" type="Panel"]
margin_right = 115.0
margin_bottom = 130.0
rect_min_size = Vector2( 115, 130 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
icon = ExtResource( 5 )
price = 100.0
gem_texture = ExtResource( 6 )
ad_texture = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
margin_left = 21.0
margin_top = 7.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "10000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuyButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -30.0
margin_top = -31.0
margin_right = 30.0
margin_bottom = -11.0
text = "$5.0"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.3326
margin_top = -32.0
margin_right = 32.6674
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 6.0
margin_top = 8.0
margin_right = 20.0
margin_bottom = 22.0
texture = ExtResource( 1 )

[node name="AdMob" parent="." instance=ExtResource( 8 )]
[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="rewarded" from="AdMob" to="." method="_on_AdMob_rewarded"]
[connection signal="rewarded_video_failed_to_load" from="AdMob" to="." method="_on_AdMob_rewarded_video_failed_to_load"]
[connection signal="rewarded_video_left_application" from="AdMob" to="." method="_on_AdMob_rewarded_video_left_application"]
